# push-operator

./: .editorconfig  .gitignore  Cargo.toml  README.md  job_example.yaml
config/: pushoperator.yaml  pushoperators.vitalbh.io.yaml
src/: crd.rs  finalizer.rs  main.rs
